word-wrap bug was fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,48 @@
-.App {
+.App{
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App .header input{
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #fff;
+  width: 165px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App .header button {
+  padding: 10px;
+  font-size: 16px;
+  margin: 10px;
+  margin-right: 0;
+  background-color: #0066ff;
+  color: #fff;
+  border: 2px solid #0066ff;
 }
 
-.App-link {
-  color: #61dafb;
+.App .header button:hover {
+  background-color: #003399;
+  border: 2px solid #003399;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .list li {
+  color: #333;
+  background-color: rgba(255, 255,255, .5);
+  padding: 15px;
+  margin-bottom: 15px;
+  border-radius: 5px;
+  list-style: none;
+
+  max-width: inherit;
+  word-wrap: break-word;
+  transition: background-color .2s ease-out;
+}
+
+.App .list li:hover {
+  background-color: pink;
+  cursor: pointer;
+}
+
+ul.list{
+  padding-left: 0;
 }
